<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">TM-Anywhere</string>
	<string name="page_label_go_back">取消</string>
	<string name="write_label_send">保存</string>
	<string name="cmenu_more">更多</string>
	<string name="tasklist_title">工作计划</string>
	<string name="huijintian">回今天</string>
	<string name="dianjihuoqugengduo">点击获取更多...</string>
	<string name="input_hint_account">请输入TM平台帐号</string>
	<string name="label_account">帐号:</string>
	<string name="label_psw">密码:</string>
	<string name="btn_signup">开通微博</string>
	<string name="btn_signin">登录</string>
	<string name="btn_cancel">取消</string>
	<string name="btn_save">保存</string>


	<!-- 底部Tab按钮 -->
	<string name="main_home">首页</string>
	<string name="main_comment">计划</string>
	<string name="main_message">短信</string>
	<string name="main_reload">报表</string>
	<string name="more">更多</string>
	<!-- Login页面 -->
	<string name="login_label_username">TM帐号:</string>
	<string name="login_label_password">密码:</string>
	<string name="login_label_signin">登 录</string>
	<string name="login_status_logging_in">登录中...</string>
	<string name="login_status_null_username_or_password">帐号和密码不能为空。</string>
	<string name="login_status_invalid_username_or_password">帐号或密码错误，请重新输入。</string>
	<string name="login_status_network_or_connection_error">网络错误，请稍后再试。</string>
	<string name="login_status_network_or_runtime_error">网络或者程序内部出错，请稍后再试。</string>
	<string name="login_register_link">今日事今日毕！今天你TM了吗？</string>
	<string name="login_status_failure">登录失败。</string>
	<!-- 欢迎页面 -->
	<string name="startpage_title">上帝说,不要入戏太深。</string>
	<string name="copyright">Copyright © 2008-2011 TM - Task Manager</string>
	<!-- 添加任务页面 -->
	<string name="createtask_begindate_textview_text">开始时间</string>
	<string name="createtask_enddate_textview_text">结束时间</string>
	<string name="createtask_tasktype_textview_text">任务名称</string>
	<string name="createtask_tasktype_spinner_prompt">所属项目</string>
	<string name="createtask_subtasktype_textview_text">所属WBS</string>
	<string name="createtask_subtasktype_spinner_prompt">选择子任务类型</string>
	<string name="createtask_project_textview_text">项目名称</string>
	<string name="createtask_project_spinner_prompt">选择项目名称</string>
	<string name="createtask_taskcontent_textview_text">任务描述</string>
	<string name="createtask_expectcost_textview_text">投入时间</string>
	<string name="createtask_realcost_textview_text">实际时间</string>
	<string name="createtask_completionrate_textview_text">状态</string>
	<string name="createtask_completionrate_spinner_prompt">状态</string>
	<!-- 关于页面 -->
	<string name="help_version_string">版本：v1.0.0 (build20111111)</string>
	<string name="help_file">逝者如斯夫，不舍昼夜 \n         -- 孔子</string>
	<!-- 状态条提示  -->
	<string name="page_status_refreshing">正在获取...</string>
	<!-- 反馈信息提示  -->
	<string name="feedback_subject">TM客户端建议</string>
	<string name="feedback_mail">tifancy@gmail.com</string>
	<!-- options menu -->
	<string name="omenu_signout">注销</string>
	<string name="omenu_refresh">刷新</string>
	<string name="omenu_preferences">选项</string>
	<string name="omenu_settings">设置</string>
	<string name="omenu_search">搜索</string>
	<string name="omenu_about">关于</string>
	<string name="omenu_exit">退出</string>
	<string name="omenu_feedback">反馈</string>
	<!-- 下拉刷新 -->
	<string name="pull_to_refresh_pull_label">下拉刷新...</string>
	<string name="pull_to_refresh_release_label">松开刷新...</string>
	<string name="pull_to_refresh_refreshing_label">读取中...</string>
	<string name="pull_to_refresh_tap_label">点击刷新...</string>
	<!-- 星期 -->
	<string name="Mon">一</string>
	<string name="Tue">二</string>
	<string name="Wed">三</string>
	<string name="Thu">四</string>
	<string name="Fri">五</string>
	<string name="Sat">六</string>
	<string name="Sun">日</string>
	
 	<string name="get_update">检查更新</string>
    <string name="update_title">当前的版本: v1.0.0</string>
    <string name="update_soft_content">1.工作任务的添加和查询管理 \n2.日历功能 \n3.通讯录功能 \n4.个人项目报表</string>
    <string name="update_title2">更多信息请关注:</string>
    <string name="indexurl">http://tm.e-learning.com.cn/</string>
    <string name="info_content">本软件当前只是实现了常用的几个功能,如果有更多的建议或需求请联系我,希望有兴趣的朋友一起参与开发完善。\n作者:tifancy\n站点:http://tm.e-learning.com.cn\n邮箱:tifancy@gmail.com</string>
    
    <string name="google_sync_help">提示：本同步功能将同步离线时录入的计划任务和对本地基础数据的更新。整个过程将会耗费一段时间,请保证网络的连接通畅并耐心等待。\n\n操作方法：保证网络通畅的情况下,点击同步按钮后,请耐心等待直至提示完成.</string>
    <string name="google_syn">同　　步</string>
    
    
    <string name="begin_string">开始日期 : </string>
    <string name="end_string">结束日期 : </string>
    <string name="query">查询</string>
    <string name="serverurl">http://tm.e-learning.com.cn/WebService/update.xml</string>
    
</resources>
