<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@+id/layout" android:background="@drawable/mid_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@+id/title_bar">
        <ScrollView android:scrollbars="none" android:fadingEdge="none" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:orientation="vertical" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:id="@+id/help_logo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:src="@drawable/icon" />
                    <TextView android:textSize="17.0dip" android:gravity="center" android:layout_gravity="center" android:id="@+id/help_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/help_version_string" />
                    <TextView android:textSize="11.0dip" android:gravity="center" android:layout_gravity="center" android:id="@+id/help_copyright" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/copyright" />
                    <TextView android:textSize="15.0dip" android:textStyle="bold" android:textColor="#ff000000" android:id="@+id/help_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/help_file" android:lineSpacingMultiplier="1.2" />
                </LinearLayout>
	<!--
		<com.rili.android.client.view.LinearLayoutForListView
		android:orientation="vertical" android:id="@id/help_contact_list"
		android:scrollbars="none" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5.0dip" android:layout_marginTop="15.0dip"
		android:layout_marginRight="5.0dip"
		android:layout_marginBottom="10.0dip"
		android:cacheColorHint="#00000000" />
	-->
	<include android:id="@+id/title_action" layout="@layout/about_set_view" />
	</LinearLayout>
        </ScrollView>
    </LinearLayout>
    <ImageView android:id="@+id/main_background" android:layout_width="fill_parent" android:layout_height="fill_parent" />
    <include android:id="@+id/title_bar" layout="@layout/header_title" />
</RelativeLayout>