<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@color/body_background">
	<!-- Header -->
	<include layout="@layout/header_title" />
	<!-- 选择开始结束日期 -->
	<LinearLayout android:orientation="vertical"
		android:id="@+id/date_button_layout" android:paddingTop="10.0dip"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<LinearLayout android:orientation="vertical" android:id="@+id/query_day_view"
			android:padding="20.0dip" android:paddingTop="10.0dip"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:weightSum="2.0">
			<RelativeLayout android:gravity="center_vertical"
				android:layout_gravity="center_vertical" android:orientation="horizontal"
				android:id="@+id/start_day_button" android:background="@drawable/setup_bg_top"
				android:layout_width="fill_parent" android:layout_height="wrap_content">
				<LinearLayout android:orientation="horizontal"
					android:paddingTop="3.0dip" android:paddingBottom="3.0dip"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="10.0dip" android:layout_alignParentLeft="true">
					<TextView android:textSize="18.0dip" android:textStyle="bold"
						android:textColor="#ff717171" android:layout_gravity="center_vertical"
						android:id="@+id/text1" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/begin_string" />
					<TextView android:textSize="18.0dip" android:textStyle="normal"
						android:textColor="#ff000000" android:paddingLeft="20.0dip"
						android:layout_gravity="center_vertical" android:id="@+id/start_text"
						android:layout_width="wrap_content" android:layout_height="wrap_content" />
				</LinearLayout>
			</RelativeLayout>
			<RelativeLayout android:gravity="center_vertical"
				android:layout_gravity="center_vertical" android:orientation="horizontal"
				android:id="@+id/end_day_button" android:background="@drawable/setup_bg_down"
				android:layout_width="fill_parent" android:layout_height="wrap_content">
				<LinearLayout android:orientation="horizontal"
					android:paddingTop="3.0dip" android:paddingBottom="3.0dip"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_marginLeft="10.0dip" android:layout_alignParentLeft="true">
					<TextView android:textSize="18.0dip" android:textStyle="bold"
						android:textColor="#ff717171" android:layout_gravity="center_vertical"
						android:id="@+id/text2" android:layout_width="wrap_content"
						android:layout_height="wrap_content" android:text="@string/end_string" />
					<TextView android:textSize="18.0dip" android:textStyle="normal"
						android:textColor="#ff000000" android:paddingLeft="20.0dip"
						android:layout_gravity="center_vertical" android:id="@+id/end_text"
						android:layout_width="wrap_content" android:layout_height="wrap_content" />
				</LinearLayout>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout android:orientation="vertical"
		android:id="@+id/title_text_linearlayout" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_marginTop="10.0dip"
		android:layout_below="@+id/button_layout">
		<RelativeLayout android:paddingBottom="3.0dip"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip"
			android:layout_centerInParent="true">
			<Button android:id="@+id/query_button" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:textStyle="bold"
				android:textColor="#ff6a3203" android:background="@drawable/btn_style_two"
				android:textSize="18.0dip" android:text="@string/query" />
		</RelativeLayout>
	</LinearLayout>
</LinearLayout>
